--- a/docs/addons/nats/customization/examples/restore/passing-args.yaml
+++ b/docs/addons/nats/customization/examples/restore/passing-args.yaml
@@ -8,7 +8,7 @@ spec:
     name: nats-restore-2.4.0
     params:
     - name: args
-      value: --progress
+      value: --no-progress
   repository:
     name: gcs-repo
   target:
