--- a/docs/addons/nats/tls/examples/cert.yaml
+++ b/docs/addons/nats/tls/examples/cert.yaml
@@ -1,7 +1,23 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: nats-tls
+  name: nats-server-tls
+  namespace: demo
+spec:
+  secretName: nats-server-tls
+  duration: 2160h # 90 days
+  renewBefore: 240h # 10 days
+  issuerRef:
+    name: nats-ca
+    kind: Issuer
+  commonName: sample-nats-server
+  dnsNames:
+  - sample-nats-tls
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: nats-client-tls
   namespace: demo
 spec:
   secretName: nats-client-tls
@@ -11,5 +27,3 @@ spec:
     name: nats-ca
     kind: Issuer
   commonName: sample-nats-client
-  dnsNames:
-  - sample-nats
