--- a/docs/addons/etcd/etcd/examples/repository.yaml
+++ b/docs/addons/etcd/etcd/examples/repository.yaml
@@ -7,5 +7,5 @@ spec:
   backend:
     gcs:
       bucket: stash-testing
-      prefix: /demo/redis/sample-redis
+      prefix: /demo/etcd/sample-etcd
     storageSecretName: gcs-secret
