Update etcd addon docs.
Signed-off-by: piyush1146115 <piyush@appscode.com>

--- a/docs/addons/etcd/etcd/examples/appbinding.yaml
+++ b/docs/addons/etcd/etcd/examples/appbinding.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   clientConfig:
     service:
-      name: etcd-service
+      name: etcd
       port: 2379
-      scheme: https
+      scheme: http
   secret:
     name: etcd-stash-auth
   type: etcd
