--- a/docs/addons/etcd/etcd/examples/etcd-secret.yaml
+++ b/docs/addons/etcd/etcd/examples/etcd-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: demo
 type: Opaque
 data:
-  username: Qm9iCg==
-  password: ZXRjZC1wYXNzd29yZAo=
+  username: cm9vdA==
+  password: cXdl
