--- a/docs/addons/etcd/etcd/examples/restoresession.yaml
+++ b/docs/addons/etcd/etcd/examples/restoresession.yaml
@@ -1,7 +1,7 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: RestoreSession
 metadata:
-  name: sample-etcd-restore
+  name: etcd-restore
   namespace: demo
 spec:
   task:
