--- a/docs/addons/etcd/customization/examples/backup/multi-retention-policy.yaml
+++ b/docs/addons/etcd/customization/examples/backup/multi-retention-policy.yaml
@@ -1,21 +1,21 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: sample-redis-backup
+  name: etcd-backup
   namespace: demo
 spec:
   schedule: "*/5 * * * *"
   task:
-    name: redis-backup-6.2.5
+    name: etcd-backup-3.5.0
   repository:
     name: gcs-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
-      name: sample-redis
+      name: etcd-appbinding
   retentionPolicy:
-    name: sample-redis-retention
+    name: sample-etcd-retention
     keepLast: 5
     keepDaily: 10
     keepWeekly: 20
