--- a/docs/addons/etcd/customization/examples/backup/passing-args.yaml
+++ b/docs/addons/etcd/customization/examples/backup/passing-args.yaml
@@ -1,22 +1,22 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: sample-redis-backup
+  name: etcd-backup
   namespace: demo
 spec:
-  schedule: "*/2 * * * *"
+  schedule: "*/5 * * * *"
   task:
-    name: redis-backup-6.2.5
+    name: etcd-backup-3.5.0
     params:
     - name: args
-      value: -db 1
+      value: --keepalive-timeout=6s	
   repository:
     name: gcs-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
-      name: sample-redis
+      name: etcd-appbinding 
   retentionPolicy:
     name: keep-last-5
     keepLast: 5
