--- a/docs/addons/etcd/customization/examples/backup/resource-limit.yaml
+++ b/docs/addons/etcd/customization/examples/backup/resource-limit.yaml
@@ -1,28 +1,28 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: sample-redis-backup
+  name: etcd-backup
   namespace: demo
 spec:
-  schedule: "*/2 * * * *"
+  schedule: "*/5 * * * *"
   task:
-    name: redis-backup-6.2.5
+    name: etcd-backup-3.5.0
   repository:
     name: gcs-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
-      name: sample-redis
-  runtimeSettings:
-    container:
-      resources:
-        requests:
-          cpu: "200m"
-          memory: "1Gi"
-        limits:
-          cpu: "200m"
-          memory: "1Gi"
+      name: etcd-appbinding
+    runtimeSettings:
+      container:
+        resources:
+          requests:
+            cpu: "200m"
+            memory: "1Gi"
+          limits:
+            cpu: "200m"
+            memory: "1Gi"
   retentionPolicy:
     name: keep-last-5
     keepLast: 5
