--- a/docs/addons/etcd/tls-secured-etcd/examples/backupconfiguration.yaml
+++ b/docs/addons/etcd/tls-secured-etcd/examples/backupconfiguration.yaml
@@ -1,7 +1,7 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: sample-etcd-backup
+  name: etcd-tls-backup
   namespace: demo
 spec:
   schedule: "*/5 * * * *"
