Update etcd addon docs according to the review.
Signed-off-by: piyush1146115 <piyush@appscode.com>

--- a/docs/addons/etcd/etcd/examples/appbinding.yaml
+++ b/docs/addons/etcd/etcd/examples/appbinding.yaml
@@ -10,6 +10,6 @@ spec:
       port: 2379
       scheme: http
   secret:
-    name: etcd-stash-auth
+    name: etcd-basic-auth
   type: etcd
   version: 3.5.0
