--- a/docs/addons/etcd/etcd/examples/etcd-secret.yaml
+++ b/docs/addons/etcd/etcd/examples/etcd-secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: etcd-stash-auth
+  name: etcd-basic-auth
   namespace: demo
 type: Opaque
 data:
   username: cm9vdA==
-  password: cXdl
+  password: bm90QHNlY3JldA==
