--- a/docs/addons/etcd/tls-secured-etcd/examples/restoresession.yaml
+++ b/docs/addons/etcd/tls-secured-etcd/examples/restoresession.yaml
@@ -16,7 +16,7 @@ spec:
       - name: workloadKind
         value: "StatefulSet"
       - name: workloadName
-        value: "etcd"
+        value: "etcd-tls"
   repository:
     name: gcs-repo
   target:
