Update docs according to the review.
Signed-off-by: piyush1146115 <piyush@appscode.com>

--- a/docs/addons/etcd/basic-auth/examples/etcd-secret.yaml
+++ b/docs/addons/etcd/basic-auth/examples/etcd-secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: etcd-basic-auth
   namespace: demo
 type: Opaque
-data:
-  username: cm9vdA==
-  password: bm90QHNlY3JldA==
+stringData:
+  username: root
+  password: not@secret
