Update docs for catalog
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/docs/addons/mysql/standalone/examples/restored-mysql.yaml
+++ b/docs/addons/mysql/standalone/examples/restored-mysql.yaml
@@ -4,7 +4,7 @@ metadata:
   name: restored-mysql
   namespace: demo
 spec:
-  version: "8.0.21-v2"
+  version: "8.0.27"
   replicas: 1
   storageType: Durable
   storage:
