--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Check links
         run: |
-          liche -r docs -d $(pwd) -c 10 -p -h -l -x '^('"$(pwd)"'/docs/addons/.*/guides/.*|.*github.com.*|.*api.slack.com.*|.*askapache.com.*|.*twitter.com.*)$'
+          liche -r docs -d $(pwd) -c 10 -p -h -l -x '^(.*/docs/{{<.*>}}/.*|.*github.com.*|.*api.slack.com.*|.*askapache.com.*|.*twitter.com.*)$'
 
       - name: Create Kubernetes cluster
         id: kind
