--- a/docs/examples/guides/advanced-use-case/cross-namespace-repo/repository.yaml
+++ b/docs/examples/guides/advanced-use-case/cross-namespace-repo/repository.yaml
@@ -9,3 +9,6 @@ spec:
       bucket: stash-testing
       prefix: /cross-namespace/data/sample-statefulset
     storageSecretName: gcs-secret
+  usagePolicy:
+    allowedNamespaces:
+      from: All
