--- a/docs/examples/guides/advanced-use-case/cross-namespace-repo/restoresession.yaml
+++ b/docs/examples/guides/advanced-use-case/cross-namespace-repo/restoresession.yaml
@@ -2,11 +2,11 @@ apiVersion: stash.appscode.com/v1beta1
 kind: RestoreSession
 metadata:
   name: ss-restore
-  namespace: demo
+  namespace: staging
 spec:
   repository:
-     name: gcs-repo
-     namespace: test
+    name: gcs-repo
+    namespace: stash
   target:
     ref:
       apiVersion: apps/v1
