Update and correct the doc.
Signed-off-by: piyush1146115 <piyush@appscode.com>

--- a/docs/examples/guides/advanced-use-case/cross-namespace-backup/backupconfiguration.yaml
+++ b/docs/examples/guides/advanced-use-case/cross-namespace-backup/backupconfiguration.yaml
@@ -2,7 +2,7 @@ apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
   name: ss-backup
-  namespace: dev
+  namespace: prod
 spec:
   repository:
     name: gcs-repo
