Update cross-cluster-backup and cross-namespace-backup doc.
Signed-off-by: piyush1146115 <piyush@appscode.com>

--- a/docs/examples/guides/advanced-use-case/cross-cluster-backup/deployment_staging.yaml
+++ b/docs/examples/guides/advanced-use-case/cross-cluster-backup/deployment_staging.yaml
@@ -1,3 +1,16 @@
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: stash-sample-data
+  namespace: demo
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
