--- a/docs/guides/advanced-use-case/exclude-include-files/examples/backupconfiguration-full.yaml
+++ b/docs/guides/advanced-use-case/exclude-include-files/examples/backupconfiguration-full.yaml
@@ -1,11 +1,11 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: deployment-backup
+  name: deployment-backup-full
   namespace: demo
 spec:
   repository:
-    name: gcs-repo
+    name: gcs-repo-full
   schedule: "*/5 * * * *"
   target:
     ref:
@@ -15,13 +15,8 @@ spec:
     volumeMounts:
     - name: source-data
       mountPath: /source/data
-    rules:
-    - paths:
-      - /source/data
-      exclude:
-      - /source/data/not-important.txt # exclude only one file
-      - /source/data/*.html # exclude all file that has a particular extension
-      - /source/data/tmp/* # exclude a directory
+    paths:
+    - /source/data
   retentionPolicy:
     name: 'keep-last-5'
     keepLast: 5
