--- a/docs/guides/advanced-use-case/exclude-include-files/examples/deployment-source.yaml
+++ b/docs/guides/advanced-use-case/exclude-include-files/examples/deployment-source.yaml
@@ -1,32 +1,19 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: demo-pvc
-  namespace: demo
-spec:
-  accessModes:
-  - ReadWriteOnce
-  storageClassName: standard
-  resources:
-    requests:
-      storage: 1Gi
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: stash-recovered
-  name: stash-recovered
+    app: stash-demo
+  name: stash-demo
   namespace: demo
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      app: stash-recovered
+      app: stash-demo
   template:
     metadata:
       labels:
-        app: stash-recovered
+        app: stash-demo
       name: busybox
     spec:
       containers:
@@ -43,4 +30,4 @@ spec:
       volumes:
       - name: source-data
         persistentVolumeClaim:
-          claimName: demo-pvc
+          claimName: source-data
