--- a/docs/guides/advanced-use-case/exclude-include-files/examples/repository-exclude.yaml
+++ b/docs/guides/advanced-use-case/exclude-include-files/examples/repository-exclude.yaml
@@ -1,11 +1,11 @@
 apiVersion: stash.appscode.com/v1alpha1
 kind: Repository
 metadata:
-  name: gcs-repo
+  name: gcs-repo-exclude
   namespace: demo
 spec:
   backend:
     gcs:
       bucket: stash-testing
-      prefix: /stash/filter/deployment
+      prefix: /demo/stash-demo/exclude
     storageSecretName: gcs-secret
