--- a/docs/guides/advanced-use-case/exclude-include-files/examples/restoresession-inlcude.yaml
+++ b/docs/guides/advanced-use-case/exclude-include-files/examples/restoresession-inlcude.yaml
@@ -5,19 +5,19 @@ metadata:
   namespace: demo
 spec:
   repository:
-    name: gcs-repo
-  target: # target indicates where the recovered data will be stored
+    name: gcs-repo-full
+  target:
     ref:
       apiVersion: apps/v1
       kind: Deployment
       name: stash-recovered
     volumeMounts:
     - name:  source-data
-      mountPath:  /source/data
+      mountPath: /source/data
     rules:
     - paths:
       - /source/data/
       include:
       - /source/data/data1.txt # restore this file
       - /source/data/*.json # restore all files with .json extension
-      - /source/data/docs/* # restore this directory
+      - /source/data/tmp/* # restore this directory
