--- a/docs/guides/advanced-use-case/cross-namespace-backup/examples/backupconfiguration.yaml
+++ b/docs/guides/advanced-use-case/cross-namespace-backup/examples/backupconfiguration.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   repository:
     name: gcs-repo
-    namespace: stash
+    namespace: demo
   schedule: "*/5 * * * *"
   target:
     ref:
