--- a/docs/guides/advanced-use-case/cross-namespace-backup/examples/repository.yaml
+++ b/docs/guides/advanced-use-case/cross-namespace-backup/examples/repository.yaml
@@ -2,7 +2,7 @@ apiVersion: stash.appscode.com/v1alpha1
 kind: Repository
 metadata:
   name: gcs-repo
-  namespace: stash
+  namespace: demo
 spec:
   backend:
     gcs:
