--- a/docs/guides/advanced-use-case/cross-namespace-backup/examples/restoresession.yaml
+++ b/docs/guides/advanced-use-case/cross-namespace-backup/examples/restoresession.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   repository:
     name: gcs-repo
-    namespace: stash
+    namespace: demo
   target:
     ref:
       apiVersion: apps/v1
