Fix example manifest files.
Signed-off-by: piyush1146115 <piyush@appscode.com>

--- a/docs/guides/advanced-use-case/customize-backup-restore/examples/restore/passing_args.yaml
+++ b/docs/guides/advanced-use-case/customize-backup-restore/examples/restore/passing_args.yaml
@@ -16,6 +16,5 @@ spec:
         mountPath: /source/data
     rules:
       - paths:
-          - /source/data/
-      - snapshots: [latest]
+          - /source/data/s
     args: ["--tag=t1,t2"]
