--- a/docs/guides/auto-backup/managed-backup/examples/deployment_user1.yaml
+++ b/docs/guides/auto-backup/managed-backup/examples/deployment_user1.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: stash-sample-data-1
-  namespace: ns1
+  namespace: user1
 data:
   file1.txt: "Data from ConfigMap 'stash-sample-data-1'"
 ---
@@ -10,7 +10,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: stash-sample-data-2
-  namespace: ns1
+  namespace: user1
 data:
   file2.txt: "Data from ConfigMap 'stash-sample-data-2'"
 ---
@@ -20,7 +20,7 @@ metadata:
   labels:
     app: stash-demo
   name: stash-demo
-  namespace: ns1
+  namespace: user1
   annotations:
     stash.appscode.com/backup-blueprint: managed-backup-blueprint
     stash.appscode.com/target-paths: "/source/data-1,/source/data-2"
