Update platform docs: gke
Signed-off-by: hmsayem <hmsayem@appscode.com>

--- a/docs/examples/guides/platforms/gke/repository.yaml
+++ b/docs/examples/guides/platforms/gke/repository.yaml
@@ -6,6 +6,6 @@ metadata:
 spec:
   backend:
     gcs:
-      bucket: appscode-qa
-      prefix: /source/data
-    storageSecretName: gcs-secret
+      bucket: stash-testing
+      prefix: demo/mariadb/sample-mariadb
+    storageSecretName: encryption-secret
