--- a/docs/examples/guides/platforms/gke/backupconfiguration.yaml
+++ b/docs/examples/guides/platforms/gke/backupconfiguration.yaml
@@ -1,23 +1,21 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: deployment-backup
+  name: sample-mariadb-backup
   namespace: demo
 spec:
+  runtimeSettings:
+    pod:
+      serviceAccountName: storage-accessor-ksa
+  schedule: "*/5 * * * *"
   repository:
     name: gcs-repo
-  schedule: "*/5 * * * *"
   target:
     ref:
-      apiVersion: apps/v1
-      kind: Deployment
-      name: stash-demo
-    volumeMounts:
-    - name: source-data
-      mountPath: /source/data
-    paths:
-    - /source/data
+      apiVersion: appcatalog.appscode.com/v1alpha1
+      kind: AppBinding
+      name: sample-mariadb
   retentionPolicy:
-    name: 'keep-last-5'
+    name: keep-last-5
     keepLast: 5
     prune: true
