--- a/docs/examples/guides/platforms/gke/restoresession.yaml
+++ b/docs/examples/guides/platforms/gke/restoresession.yaml
@@ -1,19 +1,18 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: RestoreSession
 metadata:
-  name: deployment-restore
+  name: sample-mariadb-restore
   namespace: demo
 spec:
+  runtimeSettings:
+    pod:
+      serviceAccountName: storage-accessor-ksa
   repository:
     name: gcs-repo
-  target: # target indicates where the recovered data will be stored
+  target:
     ref:
-      apiVersion: apps/v1
-      kind: Deployment
-      name: stash-recovered
-    volumeMounts:
-    - name: restore-data
-      mountPath: /source/data
-    rules:
-    - paths:
-      - /source/data/
+      apiVersion: appcatalog.appscode.com/v1alpha1
+      kind: AppBinding
+      name: sample-mariadb
+  rules:
+  - snapshots: [latest]
