--- a/docs/examples/guides/platforms/eks/irsa/restoresession.yaml
+++ b/docs/examples/guides/platforms/eks/irsa/restoresession.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   runtimeSettings:
     pod:
-      serviceAccountName: bucket-accessor
+      serviceAccountName: bucket-accessor-ksa
   repository:
     name: s3-repo
   target:
@@ -15,4 +15,4 @@ spec:
       kind: AppBinding
       name: sample-mariadb
   rules:
-  - snapshots: [latest]
+    - snapshots: [latest]
