Update platform docs for Workload Identity Support (#216)
* Update platform docs: gke

Signed-off-by: hmsayem <hmsayem@appscode.com>

* Update platform docs: eks

Signed-off-by: hmsayem <hmsayem@appscode.com>

* Resolve conversations

Signed-off-by: hmsayem <hmsayem@appscode.com>

* Update images

Signed-off-by: hmsayem <hmsayem@appscode.com>

* Remove secret verification

Signed-off-by: hmsayem <hmsayem@appscode.com>

--- a/docs/examples/guides/platforms/eks/irsa/restoresession.yaml
+++ b/docs/examples/guides/platforms/eks/irsa/restoresession.yaml
@@ -6,13 +6,13 @@ metadata:
 spec:
   runtimeSettings:
     pod:
-      serviceAccountName: storage-accessor-ksa
+      serviceAccountName: bucket-accessor-ksa
   repository:
-    name: gcs-repo
+    name: s3-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
       name: sample-mariadb
   rules:
-  - snapshots: [latest]
+    - snapshots: [latest]
