--- a/docs/examples/guides/platforms/eks/irsa/backupconfiguration.yaml
+++ b/docs/examples/guides/platforms/eks/irsa/backupconfiguration.yaml
@@ -1,18 +1,21 @@
 apiVersion: stash.appscode.com/v1beta1
-kind: RestoreSession
+kind: BackupConfiguration
 metadata:
-  name: sample-mariadb-restore
+  name: sample-mariadb-backup
   namespace: demo
 spec:
   runtimeSettings:
     pod:
-      serviceAccountName: storage-accessor-ksa
+      serviceAccountName: bucket-accessor-ksa
+  schedule: "*/5 * * * *"
   repository:
-    name: gcs-repo
+    name: s3-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
       name: sample-mariadb
-  rules:
-  - snapshots: [latest]
+  retentionPolicy:
+    name: keep-last-5
+    keepLast: 5
+    prune: true
