--- a/docs/examples/guides/platforms/eks/kube2iam/backupconfiguration.yaml
+++ b/docs/examples/guides/platforms/eks/kube2iam/backupconfiguration.yaml
@@ -6,10 +6,11 @@ metadata:
 spec:
   runtimeSettings:
     pod:
-      serviceAccountName: storage-accessor-ksa
+      podAnnotations:
+        iam.amazonaws.com/role: arn:aws:iam::452618475015:role/bucket-accessor
   schedule: "*/5 * * * *"
   repository:
-    name: gcs-repo
+    name: s3-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
