--- a/docs/guides/volumesnapshot/deployment/examples/backupconfiguration.yaml
+++ b/docs/guides/volumesnapshot/deployment/examples/backupconfiguration.yaml
@@ -1,18 +1,18 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: pvc-volume-snapshot
+  name: deployments-volume-snapshot
   namespace: demo
 spec:
   schedule: "*/5 * * * *"
   driver: VolumeSnapshotter
   target:
     ref:
-      apiVersion: v1
-      kind: PersistentVolumeClaim
-      name: source-data
-    snapshotClassName: default-snapshot-class
+      apiVersion: apps/v1
+      kind: Deployment
+      name: stash-demo
+    snapshotClassName: csi-snapshot-class
   retentionPolicy:
-    name: 'keep-last-5'
+    name: "keep-last-5"
     keepLast: 5
     prune: true
