--- a/docs/guides/volumesnapshot/deployment/examples/pvcs.yaml
+++ b/docs/guides/volumesnapshot/deployment/examples/pvcs.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: standard
+  storageClassName: csi-standard
   resources:
     requests:
       storage: 1Gi
@@ -19,7 +19,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: standard
+  storageClassName: csi-standard
   resources:
     requests:
       storage: 1Gi
