--- a/docs/guides/volumesnapshot/deployment/examples/storageclass.yaml
+++ b/docs/guides/volumesnapshot/deployment/examples/storageclass.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: standard
+  name: csi-standard
 parameters:
   type: pd-standard
 provisioner: pd.csi.storage.gke.io
