--- a/docs/guides/volumesnapshot/deployment/examples/volumesnapshotclass.yaml
+++ b/docs/guides/volumesnapshot/deployment/examples/volumesnapshotclass.yaml
@@ -1,6 +1,6 @@
-apiVersion: snapshot.storage.k8s.io/v1beta1
+apiVersion: snapshot.storage.k8s.io/v1
 kind: VolumeSnapshotClass
 metadata:
-  name: csi-gce-pd-snapshot-class
+  name: csi-snapshot-class
 driver: pd.csi.storage.gke.io
 deletionPolicy: Delete
