--- a/docs/guides/volumesnapshot/statefulset/examples/restored-statefulset.yaml
+++ b/docs/guides/volumesnapshot/statefulset/examples/restored-statefulset.yaml
@@ -48,7 +48,7 @@ spec:
       spec:
         accessModes:
         - ReadWriteOnce
-        storageClassName: standard
+        storageClassName: csi-standard
         resources:
           requests:
             storage: 1Gi
