--- a/docs/guides/managed-backup/dedicated-backup-namespace/examples/serviceaccount.yaml
+++ b/docs/guides/managed-backup/dedicated-backup-namespace/examples/serviceaccount.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: mysql-sa
-  namespace: dev
+  name: cross-namespace-target-reader
+  namespace: backup
