--- a/docs/guides/managed-backup/dedicated-backup-namespace-auto-backup/examples/backup-bluprint.yaml
+++ b/docs/guides/managed-backup/dedicated-backup-namespace-auto-backup/examples/backup-bluprint.yaml
@@ -1,7 +1,7 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupBlueprint
 metadata:
-  name: mysql-backup-blueprint
+  name: mysql-backup
 spec:
   backupNamespace: backup
   # ============== Blueprint for Repository ==========================
