--- a/docs/guides/managed-backup/dedicated-backup-namespace-auto-backup/examples/mysql.yaml
+++ b/docs/guides/managed-backup/dedicated-backup-namespace-auto-backup/examples/mysql.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sample-mysql-1
   namespace: prod-1
   annotations:
-    stash.appscode.com/backup-blueprint: mysql-backup-blueprint
+    stash.appscode.com/backup-blueprint: mysql-backup
 spec:
   version: "8.0.27"
   replicas: 1
@@ -23,7 +23,7 @@ metadata:
   name: sample-mysql-2
   namespace: prod-2
   annotations:
-    stash.appscode.com/backup-blueprint: mysql-backup-blueprint
+    stash.appscode.com/backup-blueprint: mysql-backup
 spec:
   version: "8.0.27"
   replicas: 1
@@ -42,7 +42,7 @@ metadata:
   name: sample-mysql-3
   namespace: prod-3
   annotations:
-    stash.appscode.com/backup-blueprint: mysql-backup-blueprint
+    stash.appscode.com/backup-blueprint: mysql-backup
 spec:
   version: "8.0.27"
   replicas: 1
