--- a/.github/workflows/preview-website.yml
+++ b/.github/workflows/preview-website.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     branches:
       - "*"
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
