--- a/docs/addons/kubedump/cluster/examples/backupconfiguration.yaml
+++ b/docs/addons/kubedump/cluster/examples/backupconfiguration.yaml
@@ -1,14 +1,14 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: cluster-kubedump
+  name: cluster-resources-backup
   namespace: demo
 spec:
   schedule: "*/5 * * * *"
   task:
     name: kubedump-backup-0.1.0
   repository:
-    name: gcs-repo
+    name: cluster-resource-storage
   runtimeSettings:
     pod:
       serviceAccountName: cluster-resource-reader
