--- a/docs/addons/kubedump/namespace/examples/backupconfiguration.yaml
+++ b/docs/addons/kubedump/namespace/examples/backupconfiguration.yaml
@@ -1,14 +1,14 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: namespace-kubedump
+  name: kube-system-backup
   namespace: demo
 spec:
   schedule: "*/5 * * * *"
   task:
     name: kubedump-backup-0.1.0
   repository:
-    name: gcs-repo
+    name: namespace-resource-storage
   target:
     ref:
       apiVersion: v1
@@ -16,7 +16,7 @@ spec:
       name: kube-system
   runtimeSettings:
     pod:
-      serviceAccountName: resource-reader
+      serviceAccountName: cluster-resource-reader
   retentionPolicy:
     name: keep-last-5
     keepLast: 5
