--- a/docs/addons/kubedump/namespace/examples/rbac.yaml
+++ b/docs/addons/kubedump/namespace/examples/rbac.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: resource-reader
+  name: cluster-resource-reader
   namespace: demo
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: resource-reader
+  name: cluster-resource-reader
 rules:
 - apiGroups: ["*"]
   resources: ["*"]
@@ -16,12 +16,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: resource-reader
+  name: cluster-resource-reader
 subjects:
 - kind: ServiceAccount
-  name: resource-reader
+  name: cluster-resource-reader
   namespace: demo
 roleRef:
   kind: ClusterRole
-  name: resource-reader
+  name: cluster-resource-reader
   apiGroup: rbac.authorization.k8s.io
