--- a/docs/addons/kubedump/application/examples/backupconfiguration.yaml
+++ b/docs/addons/kubedump/application/examples/backupconfiguration.yaml
@@ -1,7 +1,7 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: deployment-yaml-backup
+  name: application-manifest-backup
   namespace: demo
 spec:
   schedule: "*/5 * * * *"
@@ -11,7 +11,7 @@ spec:
       - name: includeDependants
         value: "true"
   repository:
-    name: gcs-repo
+    name: application-resource-storage
   target:
     ref:
       apiVersion: apps/v1
@@ -20,7 +20,7 @@ spec:
       namespace: kube-system
   runtimeSettings:
     pod:
-      serviceAccountName: resource-reader
+      serviceAccountName: cluster-resource-reader
   retentionPolicy:
     name: keep-last-5
     keepLast: 5
