--- a/docs/addons/kubedump/application/examples/repository.yaml
+++ b/docs/addons/kubedump/application/examples/repository.yaml
@@ -1,7 +1,7 @@
 apiVersion: stash.appscode.com/v1alpha1
 kind: Repository
 metadata:
-  name: gcs-repo
+  name: application-resource-storage
   namespace: demo
 spec:
   backend:
