--- a/docs/addons/kubedump/customization/examples/filter-resources.yaml
+++ b/docs/addons/kubedump/customization/examples/filter-resources.yaml
@@ -1,14 +1,17 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: filtered-cluster-resources-backup
+  name: cluster-resources-backup
   namespace: demo
 spec:
   schedule: "*/5 * * * *"
   task:
     name: kubedump-backup-0.1.0
+    params:
+      - name: labelSelector
+        value: "k8s-app=kube-dns"
   repository:
-    name: gcs-repo
+    name: cluster-resource-storage
   runtimeSettings:
     pod:
       serviceAccountName: cluster-resource-reader
