--- a/docs/addons/kubedump/customization/examples/passing-args.yaml
+++ b/docs/addons/kubedump/customization/examples/passing-args.yaml
@@ -1,22 +1,20 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: sample-redis-backup
+  name: cluster-resources-backup
   namespace: demo
 spec:
-  schedule: "*/2 * * * *"
+  schedule: "*/5 * * * *"
   task:
-    name: redis-backup-6.2.5
+    name: kubedump-backup-0.1.0
     params:
-    - name: args
-      value: -db 1
+      - name: sanitize
+        value: "false"
   repository:
-    name: gcs-repo
-  target:
-    ref:
-      apiVersion: appcatalog.appscode.com/v1alpha1
-      kind: AppBinding
-      name: sample-redis
+    name: cluster-resource-storage
+  runtimeSettings:
+    pod:
+      serviceAccountName: cluster-resource-reader
   retentionPolicy:
     name: keep-last-5
     keepLast: 5
