--- a/docs/addons/kubedump/customization/examples/specific-user.yaml
+++ b/docs/addons/kubedump/customization/examples/specific-user.yaml
@@ -1,21 +1,17 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: sample-redis-backup
+  name: cluster-resources-backup
   namespace: demo
 spec:
-  schedule: "*/2 * * * *"
+  schedule: "*/5 * * * *"
   task:
-    name: redis-backup-6.2.5
+    name: kubedump-backup-0.1.0
   repository:
-    name: gcs-repo
-  target:
-    ref:
-      apiVersion: appcatalog.appscode.com/v1alpha1
-      kind: AppBinding
-      name: sample-redis
+    name: cluster-resource-storage
   runtimeSettings:
     pod:
+      serviceAccountName: cluster-resource-reader
       securityContext:
         runAsUser: 0
         runAsGroup: 0
