rename service account
Signed-off-by: hmsayem <hmsayem@appscode.com>

--- a/docs/guides/platforms/gke/examples/restoresession.yaml
+++ b/docs/guides/platforms/gke/examples/restoresession.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   runtimeSettings:
     pod:
-      serviceAccountName: storage-accessor-ksa
+      serviceAccountName: bucket-user
   repository:
     name: gcs-repo
   target:
