--- a/docs/guides/platforms/gke/examples/backupconfiguration.yaml
+++ b/docs/guides/platforms/gke/examples/backupconfiguration.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   runtimeSettings:
     pod:
-      serviceAccountName: storage-accessor-ksa
+      serviceAccountName: bucket-user
   schedule: "*/5 * * * *"
   repository:
     name: gcs-repo
