Update kube2iam doc
Signed-off-by: hmsayem <hmsayem@appscode.com>

--- a/docs/guides/platforms/eks-irsa/examples/backupconfiguration.yaml
+++ b/docs/guides/platforms/eks-irsa/examples/backupconfiguration.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   runtimeSettings:
     pod:
-      serviceAccountName: bucket-accessor-ksa
+      serviceAccountName: bucket-user
   schedule: "*/5 * * * *"
   repository:
     name: s3-repo
