Fix RBAC for cross-namespace backup/restore
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/docs/guides/managed-backup/dedicated-backup-namespace/examples/clusterrole_clusterrolebinding.yaml
+++ b/docs/guides/managed-backup/dedicated-backup-namespace/examples/clusterrole_clusterrolebinding.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cross-namespace-target-clusterrole
 rules:
 - apiGroups: [""]
-  resources: ["secrets"]
+  resources: ["secrets","pods","endpoints"]
   verbs: ["get","list"]
 - apiGroups: ["appcatalog.appscode.com"]
   resources: ["appbindings"]
