--- a/docs/guides/managed-backup/dedicated-backup-namespace-auto-backup/examples/clusterrole_clusterrolebinding.yaml
+++ b/docs/guides/managed-backup/dedicated-backup-namespace-auto-backup/examples/clusterrole_clusterrolebinding.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cross-namespace-target-reader
 rules:
   - apiGroups: [""]
-    resources: ["secrets"]
+    resources: ["secrets","pods","endpoints"]
     verbs: ["get", "list"]
   - apiGroups: ["appcatalog.appscode.com"]
     resources: ["appbindings"]
