Update hook documentation for executionPolicy
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/docs/examples/crds/backupconfiguration.yaml
+++ b/docs/examples/crds/backupconfiguration.yaml
@@ -36,6 +36,7 @@ spec:
           - echo "Sample PreBackup hook demo"
       containerName: my-app-container
     postBackup:
+      executionPolicy: Always
       exec:
         command:
           - /bin/sh
