--- a/docs/guides/hooks/slack-notification/examples/all_backup_notification.yaml
+++ b/docs/guides/hooks/slack-notification/examples/all_backup_notification.yaml
@@ -17,9 +17,9 @@ spec:
       mountPath: /source/data
     paths:
     - /source/data
-    # - /path/does/not/exist
   hooks:
     postBackup:
+      executionPolicy: Always
       httpPost:
         host: hooks.slack.com
         path: /services/XX/XXX/XXXX
@@ -29,19 +29,12 @@ spec:
           - name: Content-Type
             value: application/json
         body: |
+          {{- $msg := dict  "type" "mrkdwn" "text" (printf "Backup completed for %s/%s Status: %s." .Namespace .Target.Name .Status.Phase) -}}
           {
             "blocks": [
                 {
                   "type": "section",
-                  "text": {
-                      "type": "mrkdwn",
-                      "text": "
-                          {{if eq .Status.Phase `Succeeded`}}
-                              :white_check_mark: Backup succeeded for {{ .Namespace }}/{{.Target.Name}}
-                          {{else}}
-                              :x: Backup failed for {{ .Namespace }}/{{.Target.Name}} Reason: {{.Status.Error}}.
-                          {{end}}"
-                    }
+                  "text": {{ toJson $msg }}
                 }
               ]
           }
