--- a/docs/concepts/crds/backupsession/backupsession.yaml
+++ b/docs/concepts/crds/backupsession/backupsession.yaml
@@ -13,6 +13,7 @@ spec:
     apiGroup: stash.appscode.com
     kind: BackupBatch
     name: wordpress-backup
+  retryLeft: 2
 status:
   conditions:
   - lastTransitionTime: "2020-07-25T17:41:31Z"
