--- a/docs/concepts/crds/backupconfiguration/backupconfiguration.yaml
+++ b/docs/concepts/crds/backupconfiguration/backupconfiguration.yaml
@@ -7,11 +7,13 @@ spec:
   driver: Restic
   repository:
     name: local-repo
+    namespace: demo
   # task:
   #   name: workload-backup # task field is not required for workload data backup but it is necessary for database backup.
   schedule: "* * * * *" # backup at every minutes
   paused: false
   backupHistoryLimit: 3
+  timeOut: 2h
   target:
     alias: app-data
     ref:
@@ -66,6 +68,9 @@ spec:
     medium: "Memory"
     sizeLimit: "2Gi"
     disableCaching: false
+  retryConfig:
+    maxRetry: 3
+    delay: 10m
   retentionPolicy:
     name: 'keep-last-5'
     keepLast: 5
