--- a/docs/concepts/crds/restorebatch/restorebatch.yaml
+++ b/docs/concepts/crds/restorebatch/restorebatch.yaml
@@ -7,6 +7,7 @@ spec:
   driver: Restic
   repository:
     name: minio-repo
+    namespace: demo
   executionOrder: Parallel
   members:
   - target:
@@ -32,6 +33,7 @@ spec:
         - latest
     task:
       name: mysql-restore-8.0.14
+  timeOut: 30m
 status:
   phase: Succeeded
   sessionDuration: 15.145032437s
