Update concept docs for retryConfig and timeOut (#254)
* Update concept docs for retryConfig and timeOut

Signed-off-by: Emruz Hossain <emruz@appscode.com>

* Resolve issues identified in review

Signed-off-by: Emruz Hossain <emruz@appscode.com>

Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/docs/concepts/crds/backupsession/backupsession.yaml
+++ b/docs/concepts/crds/backupsession/backupsession.yaml
@@ -13,6 +13,7 @@ spec:
     apiGroup: stash.appscode.com
     kind: BackupBatch
     name: wordpress-backup
+  retryLeft: 2
 status:
   conditions:
   - lastTransitionTime: "2020-07-25T17:41:31Z"
@@ -37,6 +38,7 @@ status:
     type: RepositoryMetricsPushed
   phase: Succeeded
   sessionDuration: 22.575920065s
+  sessionDeadline: "2020-07-25T17:46:28Z"
   targets:
   - phase: Succeeded
     preBackupActions:
