Check for spelling errors
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
           chmod +x codespan-schema-checker
           sudo mv codespan-schema-checker /usr/local/bin/codespan-schema-checker
 
+      - name: Check Spelling
+        uses: check-spelling/check-spelling@v0.0.21
+
       - name: Check links
         run: |
           liche -r docs -d $(pwd) -c 10 -p -h -l -x '^(.*/docs/{{<.*>}}/.*|.*github.com.*|.*api.slack.com.*|.*askapache.com.*|.*twitter.com.*)$'
