Add security context for elasticsearch backup and restore
Signed-off-by: hmsayem <hmsayem@appscode.com>

--- a/docs/addons/elasticsearch/kubedb/examples/restore/restoresession.yaml
+++ b/docs/addons/elasticsearch/kubedb/examples/restore/restoresession.yaml
@@ -22,5 +22,9 @@ spec:
       resources:
         requests:
           storage: 1Gi
+  runtimeSettings:
+    pod:
+      securityContext:
+        fsGroup: 65534
   rules:
   - snapshots: [latest]
