--- a/docs/addons/elasticsearch/kubedb/examples/backup/backupconfiguration.yaml
+++ b/docs/addons/elasticsearch/kubedb/examples/backup/backupconfiguration.yaml
@@ -23,6 +23,10 @@ spec:
       resources:
         requests:
           storage: 1Gi
+  runtimeSettings:
+    pod:
+      securityContext:
+        fsGroup: 65534
   retentionPolicy:
     name: keep-last-5
     keepLast: 5
